// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combining client and server state/operations should correctly propagate an error from a client resolver 1`] = `"Illegal Query Operation Occurred"`;

exports[`Combining client and server state/operations should correctly propagate an error from a client resolver 2`] = `"Illegal Mutation Operation Occurred"`;

exports[`Combining client and server state/operations should handle a simple query with both server and client fields 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field '%s' while writing result %o",
      "lastCount",
      Object {
        "count": 0,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Combining client and server state/operations should support nested querying of both server and client fields 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field '%s' while writing result %o",
      "lastName",
      Object {
        "__typename": "User",
        "firstName": "John",
        "id": 123,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
